--- a/package.json
+++ b/package.json
@@ -13,17 +13,13 @@
   },
   "dependencies": {
     "@convex-dev/auth": "^0.0.81",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
-    "lucide-react": "^0.488.0",
+    "jotai": "^2.12.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
